# foxglove_recorder_ui

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  package-lock.json  package.json  pixi.toml  tsconfig.json
.github/workflows/: ci.yml  release.yml
foxglove-extension/: README.md  config.ts  package-lock.json  package.json  tsconfig.json
foxglove-extension/src/: RecorderPanel.tsx  globals.css  index.ts
foxglove-extension/src/components/: TopicSelectorSection.tsx
foxglove-extension/src/components/ui/: button.tsx
foxglove-extension/src/hooks/: useTopicSearch.test.ts  useTopicSearch.ts
ros2_ws/src/recorder_companion/: CMakeLists.txt  package.xml
ros2_ws/src/recorder_companion/include/recorder_companion/: recorder_engine.hpp
ros2_ws/src/recorder_companion/src/: recorder_companion_node.cpp  recorder_engine.cpp
ros2_ws/src/recorder_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/recorder_interfaces/msg/: RecorderStatus.msg
ros2_ws/src/recorder_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/recorder_msgs/srv/: GetRecorderStatus.srv  StartRecording.srv  StopRecording.srv
src/: RecorderPanel.tsx
src/components/: SearchHighlight.tsx
src/components/ui/: checkbox.tsx
